--- a/packages/basalt-mdx/Headings/Headings.module.css
+++ b/packages/basalt-mdx/Headings/Headings.module.css
@@ -1,11 +1,13 @@
-.h1 {
-  margin-bottom: var(--basalt-sizing-12);
-}
+@layer basalt-mdx {
+  .h1 {
+    margin-bottom: var(--basalt-sizing-12);
+  }
 
-.h2 {
-  margin-bottom: var(--basalt-sizing-5);
-}
+  .h2 {
+    margin-bottom: var(--basalt-sizing-5);
+  }
 
-.h3 {
-  margin-bottom: var(--basalt-sizing-4);
-}
+  .h3 {
+    margin-bottom: var(--basalt-sizing-4);
+  }
+} /* end @layer basalt-mdx */
