--- a/packages/basalt-mdx/Paragraph/Paragraph.module.css
+++ b/packages/basalt-mdx/Paragraph/Paragraph.module.css
@@ -1,7 +1,9 @@
-.paragraph {
-  margin-bottom: var(--basalt-sizing-6);
+@layer basalt-mdx {
+  .paragraph {
+    margin-bottom: var(--basalt-sizing-6);
 
-  @mixin desktop {
-    margin-bottom: var(--basalt-sizing-8);
+    @mixin desktop {
+      margin-bottom: var(--basalt-sizing-8);
+    }
   }
-}
+} /* end @layer basalt-mdx */
