--- a/packages/basalt-mdx/TableHead/TableHead.module.css
+++ b/packages/basalt-mdx/TableHead/TableHead.module.css
@@ -1,8 +1,10 @@
-.tableHead {
-  border-collapse: collapse;
-  color: var(--basalt-color-text-default);
-  font-weight: var(--basalt-font-weight-bold);
-  position: relative;
-  text-align: left;
-  transition: var(--basalt-motion-transition-theme);
-}
+@layer basalt-mdx {
+  .tableHead {
+    border-collapse: collapse;
+    color: var(--basalt-color-text-default);
+    font-weight: var(--basalt-font-weight-bold);
+    position: relative;
+    text-align: left;
+    transition: var(--basalt-motion-transition-theme);
+  }
+} /* end @layer basalt-mdx */
